# c-speak-public

./: CMakeLists.txt  README.md  test_local_network.sh  test_network.sh
include/: AudioCapture.hpp  AudioManager.hpp  AudioPlayer.hpp  AudioSystem.hpp  Network.hpp  NoiseSuppressor.hpp  OpusCodec.hpp  VoiceProcessor.hpp
src/: AudioCapture.cpp  AudioManager.cpp  AudioPlayer.cpp  NoiseSuppressor.cpp  OpusCodec.cpp  VoiceProcessor.cpp  main.cpp
